@@ -1,4 +1,4 @@
-SUBDIRS=libwfut tools
+SUBDIRS=libwfut tools man
 
 pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = libwfut-0.1.pc
