@@ -1,0 +1,5 @@
+man_MANS = \
+        wfut.1
+
+EXTRA_DIST= ${man_MANS}
+
